--- a/src/Antix.EASI.Web/client/home/home.less
+++ b/src/Antix.EASI.Web/client/home/home.less
@@ -6,25 +6,21 @@
 
     .title {
         color: #fff;
-        small{
+
+        small {
             color: #eee;
         }
     }
 
     .calendar {
-        float: left;
-        position:relative;
-        z-index:1;
+        position: fixed;
+        top: 79px;
+        bottom: 0;
+        z-index: 1;
     }
 
     .calendar-entries {
-        position: fixed;
-        top:79px;
-        bottom:0;
-        overflow:auto;
-        -webkit-overflow-scrolling: touch;
-        z-index:0;
-        padding-top:10px;
+        padding-top: 10px;
         padding-left: 320px;
         padding-right: 15px;
 
